--- a/HBO/assets/css/Styles.css
+++ b/HBO/assets/css/Styles.css
@@ -34,23 +34,32 @@
 
   body{
     font-family: "Quicksand", sans-serif;
+    background-color: var(--btn-bg-color-gradient);
+  
   }
 
-  .navbar{
+
+  .menu{
     background-color: var(--primary-color);
     align-items: center;
     position: fixed;
     width: 100%;
-  
-  }
-
-  .menu{
     display: flex;
+   
     justify-content: space-between;
-
-
+    padding-top: 1rem;
+    padding-bottom: 1rem;
   }
-  
+
+  .subscribe{
+    display: flex;
+    align-items: center;
+  }
+
+  .navbar-brand{
+    margin-left: 24px;
+  }
+ 
 
   .logo{
     width: 100%;
@@ -60,10 +69,15 @@
   .nav-link{
     --bs-nav-link-color: var(--btn-link-bg-color);
     --bs-nav-link-font-weight: bold;
-   
+    
   }
 
-  .nav-item, .btn-subscribe{
+  .subscribe a:hover{
+    color: var(--btn-link-bg-color);
+  }
+
+
+  .nav-link, .btn-subscribe{
     letter-spacing: 2px;
     text-transform: uppercase;
     font-size: 0.75rem;
@@ -82,4 +96,10 @@
     padding-top: .25rem;
     padding-bottom: .25rem;
     display: flex;
+    transition: .7s;
+  }
+
+  .btn-subscribe:hover{
+    background-color: var(--btn-link-bg-color);
+    color: var(--btn-link-color);
   }
